[package]
name = "subable"
version = "0.0.0"
edition = "2024"
keywords = ["futures", "stream", "async"]
description = "A low-level asynchronous crate to subscribe on a futures::TryStream."
documentation = "https://docs.rs/subable"
repository = "https://github.com/lowlevl/subable"
license = "LGPL-3.0"
readme = "README.md"

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true

# Enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tracing = { version = "0.1.44", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
